[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player/Items/Bow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Items/Arrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 10 )

[node name="Arrow" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 2 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["Arrow", "BowArea"]]
position = Vector2( 3, 1 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="PosTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="PosTimer" to="." method="_on_PosTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
